force-app/main/default/objects/Market__c/Market__c.object-meta.xml
<CustomObject>
    <label>Market</label>
    <nameField>
        <displayFormat>M-{YYYY}{MM}{DD}{00000000}</displayFormat>
        <label>Market Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>