force-app/main/default/objects/Market__c/fields/Gridding__c.field-meta.xml
<CustomField>
    <fullName>Gridding__c</fullName>
    <formula>Shop__r.Grid__r.Gridding_Code__c</formula>
    <label>Gridding</label>
    <type>Text</type>
</CustomField>