force-app/main/default/objects/Market__c/fields/Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <label>Owner Profile</label>
    <type>Text</type>
</CustomField>