force-app/main/default/objects/Market__c/fields/ReportConfiguration__c.field-meta.xml
<CustomField>
    <fullName>ReportConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Configuration</label>
    <referenceTo>ReportConfigurationInformation__c</referenceTo>
    <relationshipLabel>Markets</relationshipLabel>
    <relationshipName>Markets</relationshipName>
    <type>Lookup</type>
</CustomField>