force-app/main/default/objects/Market__c/fields/Saved__c.field-meta.xml
<CustomField>
    <fullName>Saved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saved</label>
    <type>Checkbox</type>
</CustomField>