force-app/main/default/objects/Market__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Markets</relationshipLabel>
    <relationshipName>Markets</relationshipName>
    <type>Lookup</type>
</CustomField>