force-app/main/default/objects/Market__c/fields/UnionReport__c.field-meta.xml
<CustomField>
    <fullName>UnionReport__c</fullName>
    <label>Union Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>