force-app/main/default/objects/Market__c/fields/Weeks__c.field-meta.xml
<CustomField>
    <fullName>Weeks__c</fullName>
    <label>Weeks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>