force-app/main/default/objects/Market__c/listViews/AllMarketReports.listView-meta.xml
<ListView>
    <fullName>AllMarketReports</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Shop__c</columns>
    <columns>Status__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>DisplayUnits__c</columns>
    <columns>UnionReport__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>