force-app/main/default/objects/Market__c/listViews/SA_Market_Reports.listView-meta.xml
<ListView>
    <fullName>SA_Market_Reports</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Shop__c</columns>
    <columns>Status__c</columns>
    <columns>Gridding__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense South Africa</value>
    </filters>
    <label>SA Market Reports</label>
    <sharedTo>
        <roleAndSubordinatesInternal>South_Africa_CE_PL</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>